# pico-template-project

./: .clang-format  CMakeLists.txt  README.md  main.cpp  pico-dev-container.code-workspace
.devcontainer/: devcontainer.json
